[package]
name = "rust-arrayfire-experiments"
version = "0.1.0"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
edition = "2018"
default-run = "conway"

[[bin]]
name = "trivial"
path = "src/trivial.rs"

[[bin]]
name = "conway"
path = "src/conway.rs"

[[bin]]
name = "half-precision"
path = "src/half_precision.rs"

[[bin]]
name = "white-noise"
path = "src/white_noise.rs"

[[bin]]
name = "adaptive-threshold"
path = "src/adaptive_threshold.rs"

[dependencies]
arrayfire = "3.7.0"
half = "1.6.0"
